	* docs/windows.rst: Removed.
	* docs/setup/index.rst: Added.
	* docs/releases.rst: Added.
	* docs/api/combox.crypto.rst: Added.
	* docs/api/index.rst: Added api/combox.crypto, docs/releases to toctree.
	* combox/crypto.py: Rewrote all docstrings; they're sphinx
	friendly now.
	* README.rst: Added fancy buttons from shields.io that show stats
	about combox slurped from pypi.

2015-12-23 Siddharth Ravikumar <sravik@bgsu.edu>

	* docs/api/index.rst: Added.
	* docs/api/combox.file.rst: Added.
	* docs/index.rst: Added api/index to toc tree.

2015-12-23 Siddharth Ravikumar <sravik@bgsu.edu>

	* combox/file.py: updated docstring of all functions. The
	docstrings are now palatable to sphinx to digest.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* README.rst: removed `contact` section.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* setup.py: author changed to `combox contributors`.

2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>

	* AUTHORS: Deleted
	* CONTRIBUTORS.rst: Added
	* Makefile: updated copyright header (authors -> contributors)
	* combox/_version.py: updated copyright header (authors -> contributors)
	* combox/cbox.py: updated copyright header (authors -> contributors)
	* combox/config.py: updated copyright header (authors -> contributors)
	* combox/crypto.py: updated copyright header (authors -> contributors)
	* combox/events.py: updated copyright header (authors -> contributors)
	* combox/file.py: updated copyright header (authors -> contributors)
	* combox/gui.py: updated copyright header (authors -> contributors)
	* combox/log.py: updated copyright header (authors -> contributors)
	* combox/silo.py: updated copyright header (authors -> contributors)
	* setup.py: updated copyright header (authors -> contributors)
	* tests/_version_test.py: updated copyright header (authors -> contributors)
	* tests/config_test.py: updated copyright header (authors -> contributors)
	* tests/crypto_test.py: updated copyright header (authors -> contributors)